--- a/client/pages/canvas.html
+++ b/client/pages/canvas.html
@@ -33,6 +33,7 @@
   <input type="color" id="colorPicker" />
   <input type="range" id="strokeWidth" min="1" max="20" value="3" />
   <button id="undoBtn">↩</button>
+  
 </aside>
 
 <aside class="users-panel">
@@ -43,10 +44,11 @@
   <div id="usersList"></div>
 </aside>
 
-<main>
-  <canvas id="drawingCanvas"></canvas>
-  <div id="remoteCursors"></div>
+<main style="position: relative;">
+    <canvas id="drawingCanvas"></canvas>
+    <div id="remoteCursors"></div>
 </main>
+  
 
 <script src="../js/canvas.js"></script>
 </body>
